--- a/lab2_part2_solutions.ipynb
+++ b/lab2_part2_solutions.ipynb
@@ -847,14 +847,16 @@
     "                    nSteps = 800)\n",
     "model.run()\n",
     "prev = model.getPrevalence()\n",
-    "inc = model.getIncidence()"
+    "inc = model.getIncidence()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 436,
    "id": "4d15ae6e-70ab-43e7-8293-352031f5597f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
